WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106322
[BlackBerry] Can't select text out of current focused input
https://bugs.webkit.org/show_bug.cgi?id=106322
Summary
[BlackBerry] Can't select text out of current focused input
Sean Wang
Reported
2013-01-08 06:49:45 PST
When an editable element is focused, touch hold at the out of it couldn't trigger selection. How to reproduce: 1) Prepare a html page with code "<input value='this is a test'><br> <p>this is a test</p>" 2) Touch in the input, and then touch hold on the text in element <p> Expected: when touch in input, the virtual keyboard comes up, when touch and hold on the element <p>, the keyboard goes down, and the text is selected. Actual: The text can't be selected.
Attachments
patch
(2.73 KB, patch)
2013-01-08 07:00 PST
,
Sean Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2013-01-08 07:00:16 PST
Created
attachment 181688
[details]
patch
Rob Buis
Comment 2
2013-01-08 08:22:01 PST
Comment on
attachment 181688
[details]
patch LGTM.
WebKit Review Bot
Comment 3
2013-01-08 08:30:11 PST
Comment on
attachment 181688
[details]
patch Clearing flags on attachment: 181688 Committed
r139060
: <
http://trac.webkit.org/changeset/139060
>
WebKit Review Bot
Comment 4
2013-01-08 08:30:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug