[BlackBerry] Can't select text out of current focused input https://bugs.webkit.org/show_bug.cgi?id=106322

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2013-01-08
Reviewed by Rob Buis.

PR270755
Internally reviewed by Mike Fenton

When selection changed, the selection handler clips new selection with
current focused node's boundary. So we clear focus before selectObject.
This patch clear focus when selectObject is at a point but not at a node.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::selectObject):

Canonical link: https://commits.webkit.org/124516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139060 268f45cc-cd09-0410-ab3c-d52691b4dbfc